knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/Consolidated_Report__c.object-meta.xml
<CustomObject>
    <description>This Object contains the consolidated report for Quarter and Yearly information</description>
    <label>Consolidated Report</label>
    <nameField>
        <label>Consolidated Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>