knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>