knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Lost_Signed__c.field-meta.xml
<CustomField>
    <fullName>Lost_Signed__c</fullName>
    <label>Lost Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>