knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Contract Equivalents</fullName>
            </value>
            <value>
                <fullName>Contracts Lost</fullName>
            </value>
            <value>
                <fullName>Contracts Won</fullName>
            </value>
            <value>
                <fullName>Win Rate(%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>