knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Must_Win__c.field-meta.xml
<CustomField>
    <fullName>Must_Win__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Must Win</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>