knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/QtrAdded__c.field-meta.xml
<CustomField>
    <fullName>QtrAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if Qtr has been added to Year</description>
    <label>QtrAdded</label>
    <type>Checkbox</type>
</CustomField>