knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Quarter_Goal__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Goal__c</fullName>
    <label>Quarter Goal</label>
    <length>7</length>
    <type>Text</type>
</CustomField>