knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Remaining_Probability_Adjusted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Probability_Adjusted_Pipeline__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Remaining Probability Adjusted Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>