knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Remaining_to_Reach_Goal__c.field-meta.xml
<CustomField>
    <fullName>Remaining_to_Reach_Goal__c</fullName>
    <formula>Goal__c -   Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining to Reach Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>