knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>