knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Signed_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Signed_Awarded__c</fullName>
    <formula>Signed__c +  Awarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed + Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>