knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Signed_Awarded_Q_Probability_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Signed_Awarded_Q_Probability_Adjust__c</fullName>
    <formula>Signed_Awarded__c +  Total_Probability_Adjusted_Pipeline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed + Awarded + Q Probability Adjust</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>