knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Signed_Goal_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Signed_Goal_Achieved__c</fullName>
    <formula>Signed__c / Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Signed Goal Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>