knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Total_Probability_Adjusted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Total_Probability_Adjusted_Pipeline__c</fullName>
    <formula>Must_Win__c +  Accelerate_Proposal__c +  Remaining_Probability_Adjusted_Pipeline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Probability Adjusted Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>