knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Won_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Won_Awarded__c</fullName>
    <label>Won Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>