knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Won_SIgned__c.field-meta.xml
<CustomField>
    <fullName>Won_SIgned__c</fullName>
    <label>Won SIgned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>