knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Consolidated_Report__c/fields/Year_Goal__c.field-meta.xml
<CustomField>
    <fullName>Year_Goal__c</fullName>
    <label>Year Goal</label>
    <length>4</length>
    <type>Text</type>
</CustomField>